Fixed copyright width on mobile.

--- a/src/styles/components/_copyright.scss
+++ b/src/styles/components/_copyright.scss
@@ -59,6 +59,8 @@
     }
 
     .app__hw {
+      width: 100%;
+
       .app__social {
         margin-bottom: 20px;
         text-align: center;
